--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "vocare",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://igormandello.github.io/vocare",
   "dependencies": {
     "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-dom": "^16.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "react-scripts": "1.1.5",
+    "gh-pages": "^2.0.0"
   }
 }
