--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-popover": "^0.5.10",
     "react-router-dom": "^4.3.1"
   },
   "scripts": {
