--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "devDependencies": {
     "gh-pages": "^2.0.0",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.2",
+    "node-sass": "^4.9.4",
     "react-scripts": "1.1.5"
   }
 }
