--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-router-dom": "^4.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently 'gulp' 'npm:start-react'",
+    "start-react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -18,6 +19,7 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "concurrently": "^4.0.1",
     "gh-pages": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.2",
