--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://igormandello.github.io/vocare",
   "dependencies": {
     "@material-ui/core": "^3.4.0",
+    "classnames": "^2.2.6",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-popover": "^0.5.10",
