--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-popover": "^0.5.10",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
